# substack

./: LICENSE  README.md  pyproject.toml
substack/: __init__.py  analysis.py  cache.py  cli.py  client.py  models.py  publication.py  scraper.py
tests/: test_analysis.py  test_cache.py  test_cli.py  test_models.py  test_publication.py  test_scraper.py
