[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "substack"
version = "0.1.0"
description = "CLI tool for scraping and analysing Substack publications"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
substack = "substack.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["substack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
